@@ -1,5 +1,6 @@
 DIST diamond-girl-1.24.1.tar.bz2 838477 SHA256 2230de4548398d06042fe71c1eab82775d08a2ca9ffeba5ec6935a3e6f2e9a19 SHA512 892731e9e2c42e088aa73c67497d98cbf564b3aa3ed1dfc8dacca8daba83edb0f2cfc1a988187ef570d0f4ea756d2c9fbda5955c4e0c7d25db1811742b473487 WHIRLPOOL 67f89904a3a580800e0fd866c42fe1d4d1328fba032ee2612176ff35880046947202cb4306da439a280b08171179c830e14e515a2b364ba6b487c0c73e8e7925
+DIST diamond-girl-1.25.1.tar.bz2 960479 SHA256 3e3b270f73ca2aa842485e794ec43e278e6c9f72e5d4a3af042fccd6911b191b SHA512 677c8017e7fe4cf829c26bd3b85be4a7d6c178f53c15c86ed308d6d7e36d357f5d0575efe2bffbfac15222430a21fd905ac608c6ebc15d63b78f500e170a7805 WHIRLPOOL 67a43b4e719945ce593f70e65d9308eb6b86ca017b7e3bb1e53f7ca5718e391ce1e9249c19aaf2bf963884a4b5431e54b0409cd09ff62d22d9119dd3b498a562
 EBUILD diamond-girl-1.24.1.ebuild 1977 SHA256 0144cf95346e7d386679fc359f72c1920f8863afbb432a5eb0c57a9cf4d5b713 SHA512 c728c379233822f63b404f6f6e174741245d55114a6d9c1f5a22d1c8ba4c9f3aa84fe80f3ee1697060204c99405195e6f678c10ecc0c21b76e4a96a0900540d1 WHIRLPOOL 422b8419c1c28ff331f85432b49595721abad7bf574ffcf0888900843ad8abfed6f613f3677845eab54d3f042e7155a26df47629368573e09182996c4add0864
-EBUILD diamond-girl-9999.ebuild 1977 SHA256 0144cf95346e7d386679fc359f72c1920f8863afbb432a5eb0c57a9cf4d5b713 SHA512 c728c379233822f63b404f6f6e174741245d55114a6d9c1f5a22d1c8ba4c9f3aa84fe80f3ee1697060204c99405195e6f678c10ecc0c21b76e4a96a0900540d1 WHIRLPOOL 422b8419c1c28ff331f85432b49595721abad7bf574ffcf0888900843ad8abfed6f613f3677845eab54d3f042e7155a26df47629368573e09182996c4add0864
-MISC ChangeLog 452 SHA256 15466f5ee0738b335109c879f637d222522f0099b6ee9c70c19398c07934890b SHA512 9c3816a8115ab11f92710ce01f9cecd60747fa588756be377fa32f45718cc92ab2f5af72d3610f019a2353eb5dfe590e7551c932126b9002bcac7af12b97188d WHIRLPOOL 3f96de115c2e95cacb62b8576674d91aaecad34388ae06f37af95ebd70920b2a9df669ce8b7248909f4908ec066c8e2abc7ed522cc874175e98f4873c34d1281
+EBUILD diamond-girl-1.25.1.ebuild 1941 SHA256 469603df867b58495d5adb5d59f385aee8fbf6720f54c6e3c6a9e661c7d3587b SHA512 7956c500b1cf669f638e116502f168783e012db5f594d24b3ea2fe3efd613103b394d56793c3e182e3f9f2fee59ef9bc4311817b2f024ab1dec03c61207be84e WHIRLPOOL 65b6447b063a69eff59d110cd462a38a75bbe716ed7a1f0bbf1b3924ff6c61789d64524d5601b3b7c01c01d49d9a0a7e9e1dc066f2799250583751bb0db04b9f
+MISC ChangeLog 715 SHA256 4176bea72b39371d08ffc6038f0f68a57eb0dca47958c001e65b801711339044 SHA512 b2b756590b8f97225f31e180f8db3fc52ddbb778d9d7f92c963c78de79cb25f868c0a7a2891972115500d3b6fd3c705b9076d0815da2c300243688a4e1f54f2a WHIRLPOOL 00a3c601736954c911cb180b565f0798cf4505474ded0ff2864527d7c85116ac581f530e839f656919c2015e60ffc2fe0515aab06c23d1b7028512c963e36e88
 MISC metadata.xml 644 SHA256 7a8834d310dbec8e25a292d005bc44cdb30b8e605297e9ba501377deebbdd63c SHA512 39c5cebef22a573bbd77ff13da4d250b925cc0864978df5bb05860456b1a879fd4b5c59aa4aee3eec8769ebab148f047c4c1d0ae78e9d4d88460c8ae31b54395 WHIRLPOOL 6ca0e61dd0fef1e7dd8797509d5333a6125a39f2ca180d8c99e97a8be053f2e3a1d3106f4eca5c8bd0e4098cf1fb01fd85678093125be96ef2371cfadbd80c81
